ADD: some new classes and types CHANGE: refactoring some huge methods